--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <table width="90%" align="center">
     <tr>
       <td width="14%" valign="bottom">
-    <img src="animalixak111" width="80%">
+    <img src="animalixak111.png" width="80%">
       </td>
       <td width="14%" valign="bottom">
-  <img src="animalixak222" width="80%">
+  <img src="animalixak222.png" width="80%">
       </td>
       </td>
       <td width="14%" valign="bottom">
-  <img src="animalixak333" width="80%">
+  <img src="animalixak333.png" width="80%">
       </td>
       </td>
     </tr>
