--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <table width="90%" align="center">
     <tr>
       <td width="14%" valign="bottom">
-    <img src="animalixak111.png" width="80%">
+          <a href="https://axii14.github.io/Onatiko-Hegaztixak/"><img src="animalixak111.png" width="80%"></a>
       </td>
       <td width="14%" valign="bottom">
   <img src="animalixak222.png" width="80%">
